# CudaImageProcessing

./: README.md
GaussianFilter/: CMakeLists.txt  gaussian.cu  gaussian.h  readme.md
GuidedFilter/: CMakeLists.txt  guided_filter.cpp  guided_filter.h  guided_filter_d.cu  guided_filter_d.h  main.cpp  readme.md  run.py
Histogram/: CMakeLists.txt  clahe.cpp  clahe.h  hist_equalization.cpp  hist_equalization.h  image_process.cu  image_process.h  main.cpp  readme.md
Integral/: CMakeLists.txt  cuda_utils.h  integral_d.cu  integral_d.h  main.cpp  readme.md
Morphology/: CMakeLists.txt  image_process.cu  image_process.h  main.cpp  morphology.cpp  morphology.h  plot_stair.py  plot_time.py  readme.md
SortFilter/: CMakeLists.txt  cuda_utils.h  image_process.cu  image_process.h  main.cpp  min_max_filter.cpp  min_max_filter.h  readme.md
